# ChatAndMessageAPI

./: .dockerignore  .env.example  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2026_01_21_1815-05a58eb7ae4f_create_chat_table.py  2026_01_21_1853-dac277990fd3_create_message_table.py
docker/: entrypoint.sh
src/: main.py
src/api_v1/: __init__.py
src/api_v1/chats/: crud.py  schemas.py  views.py
src/api_v1/messages/: crud.py  schemas.py  views.py
src/core/: config.py
src/core/models/: __init__.py  chat.py  db_helper.py  message.py
src/middlewares/: request_logging.py
src/utils/: logger.py
tests/: conftest.py  test_messenger_api.py
